fixed horizontal scroll on home, article, company and casestudy pages

--- a/components/Layout/FullLayout/styles.module.scss
+++ b/components/Layout/FullLayout/styles.module.scss
@@ -5,6 +5,7 @@
   margin: 0 auto;
   padding: calc(#{$header-height} + 60px) 0 100px;
   position: relative;
+  overflow-x: hidden;
 
   @include macbook-thirteen {
     padding: calc(#{$header-height} + 60px) 80px 100px;
